fix getFirst method